<resources>
    <string name="app_name">Majika</string>
    <string name="title_twibbon">Twibbon</string>
    <string name="title_restoran">Cabang Restoran</string>
    <string name="title_menu">Daftar Menu</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="on_take">Capture</string>
    <string name="no_take">Take Again ?</string>
    <string name="pay">Bayar</string>
    <string name="payment_code_detected">Kode Pembayaran Terdeteksi</string>
    <string name="cari_menu">Cari Menu</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>
    <string name="all">All</string>
    <string name="minus_btn">-</string>
    <string name="plus_btn">+</string>
    <string name="quantity">0</string>
    <string name="maps">Maps</string>
    <string name="temperature">-°C</string>
</resources>