<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_twibbon">

    <fragment
        android:id="@+id/navigation_twibbon"
        android:name="com.example.majika.ui.twibbon.TwibbonFragment"
        android:label="@string/title_twibbon"
        tools:layout="@layout/fragment_twibbon" />

    <fragment
        android:id="@+id/navigation_restoran"
        android:name="com.example.majika.ui.restoran.RestaurantFragment"
        android:label="@string/title_restoran"
        tools:layout="@layout/fragment_restoran" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.majika.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.example.majika.ui.keranjang.KeranjangFragment"
        android:label="@string/title_keranjang"
        tools:layout="@layout/fragment_keranjang" />
</navigation>