<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardBackgroundColor="@color/item"
    app:cardCornerRadius="15dp"
    app:contentPadding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="150dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/item_price"
            app:layout_constraintEnd_toStartOf="@+id/quantity_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/navbar"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quantity_container"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/quantity_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="7dp"
                android:background="@color/navbar"
                android:text="@string/minus_btn"
                android:textColor="@color/item"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/quantity"
                android:textColor="@color/bg"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="2dp"
                android:background="@color/navbar"
                android:text="@string/plus_btn"
                android:textColor="@color/item"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
